# eltex

./: .gitignore  2.sh  README.md
catq/: CMakeLists.txt
catq/src/: main.c
mod3-3/: .clang-format  README.md  main.c  sys1.c  sys2.c
mod3-5/: Makefile  main  main.c
mod3-7/: CMakeLists.txt  client.c  common.h  server.c
task-4/: 1.sh  3.sh
task-5/: Makefile  main.c
task-6/: CMakeLists.txt  README.md
task-6/s_common/: CMakeLists.txt
task-6/s_common/include/s_common/: s_common.h
task-6/s_main/: CMakeLists.txt
task-6/s_main/src/: main.c
task-6/s_string/: CMakeLists.txt
task-6/s_string/include/s_string/: s_string.h
task-6/s_string/src/: s_string.c
task-6/s_students/: CMakeLists.txt
task-6/s_students/include/s_students/: s_student.h  s_student_table.h
task-6/s_students/src/: s_student.c  s_student_table.c
task-6/s_terminal/: CMakeLists.txt
task-6/s_terminal/include/s_terminal/: s_table_view.h
task-6/s_terminal/src/: s_table_view.c
task-6/s_utils/: CMakeLists.txt
task-6/s_utils/include/s_utils/: s_input.h
task-6/s_utils/src/: s_input.c
